FIx MathJax overflow
Fix issue where overflowing text could not be seen

#8

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -266,3 +266,7 @@ footer p {
 #origination_notice {
   display: none;
 }
+
+#calculation_steps{
+	overflow-x: scroll;
+}
